# add-to-pet

./: .gitignore  README.md  add_to_pet_example.py  nblite.toml  pyproject.toml  test.sh
add_to_pet/: __init__.py  app.py  const.py  main.py  utils.py
nbs/: app.ipynb  const.ipynb  index.ipynb  main.ipynb  test_aliases.sh  test_snippet.toml  utils.ipynb
pts/: app.pct.py  const.pct.py  index.pct.py  main.pct.py  utils.pct.py
