[project]
name = "add-to-pet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "toml>=0.10.2",
    "typer>=0.19.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
ignore-vcs = true
packages = ["add_to_pet"]
include = ["add_to_pet/static/**"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.0",
    "nblite>=0.2.0",
]

[project.scripts]
add-to-pet = "add_to_pet.app:app"
